--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -52,10 +52,10 @@
         "in_open": "Esta es la cantidad de %(asset)s que usted tiene en pedidos abiertos.",
         "in_open_value": "Este es el valor estimado de lo %(asset)s que usted tiene en pedidos abiertos.",
         "intro_text_1": "Su Decentralized Platform",
-        "intro_text_2": "<b>El DEX</b> está inherentemente descentralizado, permitiéndote comerciar BitShares core token (BTS) y un rango de activos sin confianza con precio estable, vinculado al mercado como bitUSD, bitCNY, bitBTC, bitGold y mucho mas. estos activos pueden ser comerciados sin <b>zero</b> rischio de contraparte, poniéndote en control total de tus fondos.",
+        "intro_text_2": "<b>El DEX</b> está inherentemente descentralizado, permitiéndote comerciar Lampgram core token (BTS) y un rango de activos sin confianza con precio estable, vinculado al mercado como bitUSD, bitCNY, bitBTC, bitGold y mucho mas. estos activos pueden ser comerciados sin <b>zero</b> rischio de contraparte, poniéndote en control total de tus fondos.",
         "intro_text_3": "<b>El DEX</b> también permite la creación de activos emitidos por el usuario (UIAs), que pueden ser comerciados en contra de cualquier otro UIAs o activos sin confianza en la plataforma.  Un emisor muy conocido en The DEX es <b> OpenLedger</b>, que ofrece una serie de activos que incluyen BTC, ETH, STEEM, DASH, LTC, DOGE, y mucho mas",
         "intro_text_4": "Esto le da a los comerciantes de criptomonedas una combinación única de comercio tradicional y descentralizado, todo en una interfaz de intercambio familiar. Feliz comercio!",
-        "intro_text_title": "Bienvenido en BitShares",
+        "intro_text_title": "Bienvenido en Lampgram",
         "login_with": "Login with",
         "market_actions": "Acciones del mercado",
         "market_value": "Valor de Mercado",
@@ -78,7 +78,7 @@
             "membership_expiration": "Vencimiento de la Membresía",
             "network_percentage": "Red",
             "referral_link": "Tu enlace de referencia",
-            "referral_text": "Dale esto a personas que usted quiera referir a BitShares",
+            "referral_text": "Dale esto a personas que usted quiera referir a Lampgram",
             "referrals": "Referidos",
             "referrer": "Afiliado Referente",
             "registrar": "Registrante",
@@ -368,7 +368,7 @@
             "workers_short": "Trabajadores"
         },
         "voting": "Votación",
-        "welcome": "Bienvenido a BitShares",
+        "welcome": "Bienvenido a Lampgram",
         "whitelist": {
             "add": "Añadir a la lista blanca",
             "add_black": "Añadir a la lista negra",
@@ -397,7 +397,7 @@
     },
     "app_init": {
         "browser": "Navegador no soportado",
-        "browser_text": "El navegador que está utilizando no se ha probado completamente para admitir la billetera BitShares. Le recomendamos encarecidamente que haga una copia de seguridad de su monedero local e importarlo utilizando el navegador Chrome hasta que hayamos tenido más tiempo para probar completamente el navegador de su elección. Úselo bajo su propio riesgo.",
+        "browser_text": "El navegador que está utilizando no se ha probado completamente para admitir la billetera Lampgram. Le recomendamos encarecidamente que haga una copia de seguridad de su monedero local e importarlo utilizando el navegador Chrome hasta que hayamos tenido más tiempo para probar completamente el navegador de su elección. Úselo bajo su propio riesgo.",
         "check_latency": "Comprobando la latencia ...",
         "check_latency_feedback": "Comprobando la latencia (%(pinged)s/%(totalToPing)s nodos) ...",
         "check_latency_feedback_country": "Verificación de latencia en el mejor país (%(pinged)s/%(totalToPing)s nodos)",
@@ -932,12 +932,12 @@
         "loading": "Cargando...",
         "nosync": "Su nodo activo no está sincronizado",
         "synced": "Sincronizado",
-        "title": "BitShares",
+        "title": "Lampgram",
         "unsynced": "Fuera de sincronización",
         "update_available": "ACTUALIZACIÓN DISPONIBLE"
     },
     "gateway": {
-        "add_funds": "Agregue fondos de manera rápida y fácil a su cuenta de BitShares <strong>%(account)s</strong>. Este servicio es provisto por Openledger.",
+        "add_funds": "Agregue fondos de manera rápida y fácil a su cuenta de Lampgram <strong>%(account)s</strong>. Este servicio es provisto por Openledger.",
         "address": "Dirección",
         "address_with_memo": "%(address)s <span class=\"blocktrades-with-memo\">con memo</span> %(memo)s",
         "agreement": {
@@ -1069,7 +1069,7 @@
         "website": "Visitar el website",
         "withdraw": "Retiro",
         "withdraw_coin": "Retiro %(coin)s (%(symbol)s)",
-        "withdraw_funds": "usted està retirando fondos de su cuenta de BitShares a su cuenta externa %(asset)s cuenta.",
+        "withdraw_funds": "usted està retirando fondos de su cuenta de Lampgram a su cuenta externa %(asset)s cuenta.",
         "withdraw_history_status": {
             "audited": "auditoria completada",
             "auditing": "retirar auditoria",
@@ -1125,7 +1125,7 @@
         "payments_legacy": "Send (legacy)",
         "settings": "Configuraciónes",
         "showcases": "Spotlight",
-        "title": "BitShares - Interfaz de Usiario",
+        "title": "Lampgram - Interfaz de Usiario",
         "unlock": "Desbloquear",
         "unlock_password": "Inicio de sesión en el Cloud Wallet",
         "unlock_short": "Inicio de sesión",
@@ -1174,7 +1174,7 @@
             "borrow": "Pedir prestado",
             "buy": "Comprar"
         },
-        "download": "Descarga la nueva versión de BitShares UI",
+        "download": "Descarga la nueva versión de Lampgram UI",
         "excel": "Descarga archivo .csv",
         "eye": "Ocultar Nodo",
         "eye-striked": "Mostrar Nodo",
@@ -1590,7 +1590,7 @@
         "walletDescription": "Se creará automáticamente un archivo bin. Por favor descárguelo y manténgalo en un lugar seguro. Deberá cargar este archivo para iniciar sesión en su cuenta en el futuro..",
         "walletLoginByValue": "Archivo bin + contraseña",
         "walletModelTitle": "Por bin-archivo",
-        "walletNote": "Tenga en cuenta que BitShares no almacena las contraseñas de los usuarios y no pudo recuperar las cuentas de los usuarios después de la pérdida de la contraseña.",
+        "walletNote": "Tenga en cuenta que Lampgram no almacena las contraseñas de los usuarios y no pudo recuperar las cuentas de los usuarios después de la pérdida de la contraseña.",
         "whyBinFile": "¿Por qué necesito un archivo .bin?"
     },
     "settings": {
@@ -1746,7 +1746,7 @@
         "borrow": {
             "borrow_tooltip": "You can also find this feature in your Dashboard under the tab Margin Positions, or by clicking  Borrow in the Exchange",
             "choose": "Choose the SmartCoin you want to create a position for",
-            "description": "Pedir prestado un BitAsset de la cadena de bloques de BitShares block por el bloqueo de la garantía (e.g. bitUSD, bitCNY, etc.)",
+            "description": "Pedir prestado un BitAsset de la cadena de bloques de Lampgram block por el bloqueo de la garantía (e.g. bitUSD, bitCNY, etc.)",
             "do_it": "Let's do it",
             "get_started": "Get started",
             "navigate_with_keys": "The mechanism of the SmartCoin generation will be explained in the following steps. You can also use arrow keys to navigate",
@@ -1760,7 +1760,7 @@
                 "title_within": "What are the benefits?"
             },
             "steps_concept": {
-                "text": "A Collateralized Debt Position enables every user of the BitShares Blockchain to generate SmartCoins (MPA) by providing collateral. The collateral is locked up until you pay back the SmartCoins you have generated. You are effectively borrowing the SmartCoin from the BitShares Blockchain.",
+                "text": "A Collateralized Debt Position enables every user of the Lampgram Blockchain to generate SmartCoins (MPA) by providing collateral. The collateral is locked up until you pay back the SmartCoins you have generated. You are effectively borrowing the SmartCoin from the Lampgram Blockchain.",
                 "text_legend": "Example bitUSD: Provide BTS as collateral to borrow bitUSD",
                 "title": "Concept",
                 "title_within": "What is a Collateralized Debt Position?"
@@ -1771,7 +1771,7 @@
                 "title_within": ""
             },
             "steps_introduction": {
-                "text": "Use this native dApp from the BitShares Blockchain to manage depositing collateral and the generation of SmartCoins.",
+                "text": "Use this native dApp from the Lampgram Blockchain to manage depositing collateral and the generation of SmartCoins.",
                 "title_within": "This is the place to generate SmartCoins (Market Pegged Assets, MPAs)"
             },
             "steps_risks": {
@@ -1802,7 +1802,7 @@
             "title": "Transferencia temporizada"
         },
         "voting": {
-            "description": "Vote por productores de bloques, miembros de comités y propuestas de trabajadores para influir en las decisiones estratégicas y el avance de la Blockchain de BitShares.",
+            "description": "Vote por productores de bloques, miembros de comités y propuestas de trabajadores para influir en las decisiones estratégicas y el avance de la Blockchain de Lampgram.",
             "title": "Votación"
         }
     },
@@ -1841,7 +1841,7 @@
         "lack_funds": "There is not enough funds to perform the operation",
         "latest_price": "Este es el utlimo precio en el mercado.",
         "legacy_explanation": "Hides proposals that are duplicates, spam or have been started but not active for longer than 2 months.",
-        "login": "Esta billetera de BitShares no ofrece un inicio de sesión tradicional sino que simplemente bloquea o desbloquea una billetera que es <b>solo</b> almacenada localmente en su navegador.<br/><br/> Cada vez que cierre la billetera, esta se bloqueará y se cerrerá efectivamente la sesión.",
+        "login": "Esta billetera de Lampgram no ofrece un inicio de sesión tradicional sino que simplemente bloquea o desbloquea una billetera que es <b>solo</b> almacenada localmente en su navegador.<br/><br/> Cada vez que cierre la billetera, esta se bloqueará y se cerrerá efectivamente la sesión.",
         "login-tooltip": {
             "incorrectPassword": {
                 "begin": "Ingrese otra contraseña o intente ",
@@ -2086,7 +2086,7 @@
         "final": "Balance final",
         "from": "Desde",
         "header": "Detalles de transferencia",
-        "header_subheader": "Las transferencias se utilizan para enviar fondos a otros titulares de cuentas BitShares",
+        "header_subheader": "Las transferencias se utilizan para enviar fondos a otros titulares de cuentas Lampgram",
         "header_subheader_propose": "Proponer enviar fondos desde uno %(wallet_name)s cuenta a una otra. El cuenta COMPRAR es la cuenta proponiendo la transacción.",
         "memo": "Memo",
         "memo_unlock": "Desbloquee su billetera/cuenta para ver esta nota",
@@ -2147,7 +2147,7 @@
         "backup_brainkey": "Backup Brainkey",
         "backup_explain": "Al hacer clic en el siguiente botón, se generará un archivo de respaldo con una estenciòn .bin . Este archivo está encriptado con su contraseña de billetera y contiene todas las claves privadas para sus cuentas. Se puede usar para restaurar tu billetera o moverla a una computadora / navegador diferente.",
         "backup_login": "Backup & iniciar sesion",
-        "backup_new_account": "Felicidades, acaba de crear una nueva cuenta en los BitShares blockchain! Se recomienda encarecidamente que haga una copia de seguridad de su cartera ahora. Sin un respaldo que no hay manera de restaurar su cuenta si algo le sucede a su computadora.",
+        "backup_new_account": "Felicidades, acaba de crear una nueva cuenta en los Lampgram blockchain! Se recomienda encarecidamente que haga una copia de seguridad de su cartera ahora. Sin un respaldo que no hay manera de restaurar su cuenta si algo le sucede a su computadora.",
         "backup_warning": "Parece que sus archivos de clave privada no están respaldados. Por razones de seguridad, recomendamos a los usuarios que no inicien sesión sin hacer una copia de seguridad de sus claves privadas.",
         "balance_claim_lookup": "Búsquedas de saldos",
         "balance_claims": "Balances Solicitados",
@@ -2186,7 +2186,7 @@
         "create_importkeys_text": "Para importar claves, primero necesita crear una billetera local para contener las llaves. Complete el cuadro de diálogo siguiente para crear una nueva billetera local. ",
         "create_password": "Crea una nueva cuenta usando una contraseña",
         "create_success": "Su billetera local ha sido creada",
-        "create_text": "El monedero local BitShares se almacena en su navegador, no se almacena en la nube. Una billetera puede contener varias cuentas y se puede transferir fácilmente entre navegadores y computadoras utilizando un archivo de copia de seguridad.",
+        "create_text": "El monedero local Lampgram se almacena en su navegador, no se almacena en la nube. Una billetera puede contener varias cuentas y se puede transferir fácilmente entre navegadores y computadoras utilizando un archivo de copia de seguridad.",
         "create_w_a": "Crea una billetera local que contenga una cuenta",
         "create_wallet": "Crear Billetera",
         "create_wallet_backup": "Crear una nueva billetera desde la copia de seguridad",
@@ -2207,14 +2207,14 @@
         "first_account_paid": "Como esta es su primera cuenta, un faucet pagará la tarifa de registro por usted.",
         "generated": "Contraseña generada",
         "go_get_started": "Empezando",
-        "has_wallet": "Cuando cree su primera cuenta de BitShares, también se creará automáticamente una billetera local BitShares y se almacenará en su navegador. Esta billetera local está encriptada con su contraseña, y contendrá cualquier clave privada que pertenezca a sus cuentas. ¡Es importante que se tome el tiempo para hacer una copia de seguridad de esta billetera una vez creada!",
+        "has_wallet": "Cuando cree su primera cuenta de Lampgram, también se creará automáticamente una billetera local Lampgram y se almacenará en su navegador. Esta billetera local está encriptada con su contraseña, y contendrá cualquier clave privada que pertenezca a sus cuentas. ¡Es importante que se tome el tiempo para hacer una copia de seguridad de esta billetera una vez creada!",
         "import_20_notice1": "Importar su BACKUP BTS 2.0+ primero",
         "import_20_notice2": "(si lo tiene)",
         "import_backup": "Importar Backup",
         "import_backup_choose": "Seleccione su archivo de copia de seguridad en el cuadro de diálogo a continuación. Esto es completamente seguro ya que el archivo no se carga en ninguna parte y nunca abandona su navegador.",
         "import_balance": "Importar balance(s)",
         "import_bts": "Importar a BTS 0.9.3c exportar llave",
-        "import_bts1": "Importar desde BitShares 0.9.3c",
+        "import_bts1": "Importar desde Lampgram 0.9.3c",
         "import_key_success": "Exitosamente importados %(count)s keys.",
         "import_keys": "Importar Llaves",
         "import_keys_tool": "Herramienta clave de importación",
